name: contiguous
version: 0.1.0.0
description: Please see the README on GitHub
homepage: https://github.com/andrewthad/contiguous
bug-reports: https://github.com/andrewthad/contiguous/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/contiguous

library
  exposed-modules:
    Data.Primitive.Contiguous
  hs-source-dirs: src
  build-depends:
      base >=4.9 && <5
    , primitive
  default-language: Haskell2010

